# python_package_practice

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  einstein.txt  example.ipynb  make.bat
src/python_package_practice/: __init__.py
tests/: test_python_package_practice.py
