[tool.poetry]
name = "python_package_practice"
version = "0.1.0"
description = "A toy package using the word count functions from py-pkgs template"
authors = ["Nour Shawky"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
